--- a/public/sass/_grafana.scss
+++ b/public/sass/_grafana.scss
@@ -109,3 +109,5 @@
 @import 'pages/plugins';
 @import 'old_responsive';
 @import 'components/view_states.scss';
+
+@import '~react-image-gallery/styles/scss/image-gallery.scss';
