--- a/public/sass/_grafana.scss
+++ b/public/sass/_grafana.scss
@@ -113,13 +113,21 @@
 @import '~react-image-gallery/styles/scss/image-gallery.scss';
 
 .image-gallery {
-  width: 400px;
-  height: 300px;
+  width: 600px;
+  height: 400px;
 }
 
 .image-gallery-slide img {
-  width: 400px;
-  height: 300px;
+  width: 600px;
+  height: 400px;
+  object-fit: fill;
+  overflow: hidden;
+  object-position: center center;
+}
+
+.image-gallery-slide iframe {
+  width: 600px;
+  height: 400px;
   object-fit: fill;
   overflow: hidden;
   object-position: center center;
