--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Load environment variables -->
+    <script src="env.js" type="text/javascript"></script>
     <script>
       // https://github.com/GoogleChromeLabs/tti-polyfill
       !(function() {
