--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Load environment variables -->
-    <script src="env.js" type="text/javascript"></script>
+    <!-- <script src="env.js" type="text/javascript"></script> -->
     <script>
       // https://github.com/GoogleChromeLabs/tti-polyfill
       !(function() {
