--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -21,7 +21,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000" />
 
-    <title>Grafana</title>
+    <title>HTA Viet</title>
 
     <base href="[[.AppSubUrl]]/" />
 
@@ -191,7 +191,7 @@
           <div class="preloader__logo"></div>
         </div>
       </div>
-      <div class="preloader__text">Loading Grafana</div>
+      <div class="preloader__text">Loading HTA Viet</div>
       <div class="preloader__text preloader__text--fail">
         <p>
           <strong>If you're seeing this Grafana has failed to load its application files</strong>
@@ -223,34 +223,15 @@
             <div class="text-center">
               <ul>
                 <li>
-                  <a href="http://docs.grafana.org" target="_blank">
-                    <i class="fa fa-file-code-o"></i>
-                    Docs
-                  </a>
-                </li>
-                <li>
-                  <a href="https://grafana.com/services/support" target="_blank">
-                    <i class="fa fa-support"></i>
-                    Support Plans
-                  </a>
-                </li>
-                <li>
-                  <a href="https://community.grafana.com/" target="_blank">
-                    <i class="fa fa-comments-o"></i>
-                    Community
+                  <a href="http://erp.htaviet.com:9397/" target="_blank">
+                    <i className="fa fa-support"></i>
+                    ERP HtaViet
                   </a>
                 </li>
                 <li>
                   <a href="https://grafana.com" target="_blank">[[.AppName]]</a>
                   <span>v[[.BuildVersion]] (commit: [[.BuildCommit]])</span>
                 </li>
-                [[if .NewGrafanaVersionExists]]
-                <li>
-                  <a href="https://grafana.com/get" target="_blank" bs-tooltip="'[[.NewGrafanaVersion]]'">
-                    New version available!
-                  </a>
-                </li>
-                [[end]]
               </ul>
             </div>
           </footer>
