--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -247,7 +247,7 @@
         window.onload = function() {
           var preloader = document.getElementsByClassName("preloader");
           if (preloader.length) {
-            preloader[0].className = "preloader preloader--done";
+            preloader[0].className = "preloader copreloader--done";
           }
         };
     </script>
