--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -224,7 +224,7 @@
             <div class="text-center">
               <ul>
                 <li>
-                  <a href="http://erp.htaviet.com:9397/" target="_blank">
+                  <a href="https://erp.htaviet.com:7788/" target="_blank">
                     <i className="fa fa-support"></i>
                     ERP HtaViet
                   </a>
